--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ header{
     align-items: center;
     background-image: url(./assets/img-header.jpg) ;
     background-size: cover;
-    background-position: center;  
-   
+    background-position: center; 
 }
 header nav{
     width: 100%;
@@ -49,8 +48,7 @@ header nav{
 }
 .logo-pg{
     width: 4rem;
-    height: 4rem;
-   
+    height: 4rem; 
 }
 .logo-photo{
     width: 16rem;
@@ -59,37 +57,22 @@ header nav{
     display: none;
 }
 .icon-search-hide{
+    display: none;
     font-size: 1.7rem;
     color: var(--color-base-gray);
 }
 .bar{
     display: none;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-    background-color: var(--color-gray-light);
-    margin: 0 1rem;
-    border-radius: 3rem;
 }
 
 .bar input{
-    width: 100%;
-    font-size: 1.3rem;
-    border: none;
-    outline: none;
-    background-color: var(--color-gray-light);
+    display: none;   
 }
 .bar .wrapper{
-    background-color: var();
-    display: flex;
-    align-items: center;
+    display: none;   
 }
 .bar button{
-    display: flex;
-    align-items: center;
-    border: none;
-    background-color: transparent; 
+    display: none;  
 }
 button p{
     color: var(--color-base-gray);
@@ -184,8 +167,7 @@ input{
     display: flex;
     align-items: center;
     border: none;
-    background-color: transparent;
-    
+    background-color: transparent;   
 }
 button p{
     color: var(--color-base-gray);
@@ -203,39 +185,35 @@ button p{
 /*section*/
 
 main{
-    margin: auto;
-    overflow-y: scroll;
-    
-}
-.options{
-    width: 90%;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    margin: auto;
 }
+
 section{
     display: flex;
     flex-direction: column;
-    align-items: center;  
+    align-items: center;   
 }
 section ul{
+    width: 100%;
     gap: 4rem;
     display: flex;
     padding: 2rem 2rem 4rem;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     overflow-x: scroll;
-    width: 90%;
 }
 section ul li{
     display: flex;
     align-items: center;
     list-style-type: none;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: bold;
     color: var(--color-base-gray); 
     gap: .5rem;
 }
+
 .select{
     background-color: var(--color-gray-light);
     padding: 1rem 2rem;
@@ -266,9 +244,17 @@ section button{
 .icon-settings{
     font-size: 2rem;
 }
+
+.options{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 0 0 1rem;
+}
 .tags{
   display: flex;
-  width: 90%;
+  width: 100%;
   gap: 1.2rem;
   margin: 2rem 1rem;
   overflow-x: scroll;
@@ -281,27 +267,34 @@ section ul::-webkit-scrollbar {
     display: none;
 }
 .tags p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 3rem;
+    width: 6.5rem;
     font-size: 1.3rem;
     padding: .4rem 2rem;
     border: 1px solid var(--color-base-gray);
-    border-radius: 1rem;
-    
+    border-radius: 1rem;    
 }
 /*article*/
 article{
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    width: 95%;
+   padding: 1rem;
 }
 figure{
-     margin: .5rem 0;
+    margin: 1rem 0;
 }
 img{
-  width: 100%; 
-    
+  width: 100%;  
+}
+main button{
+    align-self: center;
+    background-color: var(--color-base-whith);
+    color: black;
+    font-weight: bold;
+    border: 1px solid var(--color-base-gray);
+    padding: 1rem 2rem;
+    border-radius: 3rem;
 }
 /*footer*/
 
@@ -310,7 +303,6 @@ footer{
     flex-direction: column;
     align-items: center;
     height: 20rem;
-
 }
 footer img{
     width: 20rem;
@@ -358,25 +350,56 @@ footer ul{
     .logo-photo{
         display: block;
     }
+    /*bar*/
     .bar{
+        display: none;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 1rem;
+        background-color: var(--color-gray-light);
+        margin: 0 1rem;
+        border-radius: 3rem;
+    }
+    .bar input{
         display: flex;
+        width: 100%;
+        font-size: 1.3rem;
+        border: none;
+        outline: none;
+        background-color: var(--color-gray-light);
+    }
+    .bar .wrapper{
+        background-color: var();
+        display: flex;
+        align-items: center;
+    }
+    .bar button{
+        display: flex;
+        align-items: center;
+        border: none;
+        background-color: transparent; 
     }
     .icon-search-hide{
         display: none;
+        overflow: hidden;
+        width: 0;
+        height: 0;
     }
     .menu{ 
         display: none;
     }
+    /*title*/
     .title{
         width: 78rem;
         margin: 13rem 0rem 1rem;
     }
-   
     h1{
         font-size: 3.1rem;
     }
     section ul{
         padding: 3rem 0rem 2rem;
+        justify-content: center;
     }
     section ul li{
         font-size: 1.5rem;
@@ -390,7 +413,7 @@ footer ul{
     .options{
         flex-direction: row;
         width: 97%;
-        justify-content: space-between;
+        justify-content: space-between;  
     }
     .tags{
         width: 70%;
@@ -402,15 +425,19 @@ footer ul{
         width: 20rem;
     }
     .tags p{
-        font-size: 1.5rem;
+        height: 3rem;
+        width: 6.5rem;
+        font-size: 1.3rem;
+        padding: .4rem 2rem;   
     }
     article{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 2rem;
+        column-count: 4;
+        padding: 2rem;
+        margin: 0;
+        border: 0;
+        gap: 0;
     }
     figure{
-        width: 23%;
-        margin: 0;
+        margin: 1rem;
     }
 }
